[Days] Fix white space on mobile

--- a/www/days/cover.css
+++ b/www/days/cover.css
@@ -22,23 +22,31 @@
 
 /* Layout */
 
- .container {
+.container {
     max-width: 800px;
     margin: 0 auto;
 }
 
- .content {
+.content {
     max-width: 350px;
-    margin: 0 auto;
+    margin: 20px auto 0 auto;
 }
 
 .screenshot {
     text-align: center;
+    margin-bottom: 30px;
 }
 
  @media (min-width: 768px) {
+    .content {
+        margin-top: 40px;
+        margin-bottom: 40px;
+    }
+
     .screenshot {
         text-align: right;
+        margin-top: 40px;
+        margin-bottom: 40px;
     }
 }
 
